2000-12-18  John Harper  <jsh@eazel.com>

	* keys.c (direct_modifiers): only substitute physical for
	virtual modifiers if the physical modifiers actually exist.
	Otherwise just preserve the virtual bits

	(translate_event_to_x_button, translate_event_to_x_key): if
	after translating modifiers, any virtual modifiers still exist,
	don't accept the event

	* keys.h (EV_VIRT_MOD_MASK): new definition, the bits
	representing virtual (non X-native) modifiers

2000-12-05  John Harper  <jsh@eazel.com>

	* keys.c (lookup_event): reject events if they're button events
	but don't have at least one button modifier (or the `Any'
	modifier) set. Fixes #4983

2000-12-04  John Harper  <jsh@eazel.com>

	* keys.c: support Button6 and Button7
	* keys.h: define Button6 and Button7 values to their logical
	values (known to work on XFree86 version 4)

	[ adapted from a patch by Steve Haslam <araqnid@debian.org> ]

	* images.c (Fimage_modifier, Fset_image_modifier): fixed bug of
	not accepting () to stand for all three color components

	* version 0.34

2000-11-28  John Harper  <jsh@eazel.com>

	* keys.c (wm_mods, Fwm_modifier, Fset_wm_modifier): a new
	modifier, `W-', that's user-settable
	(Fevent_match): new function for comparing events

	* keys.h (EV_MOD_WM): new bit

2000-11-27  John Harper  <jsh@eazel.com>

	* x.c (x_window_event_handler): ignore any expose events which
	don't have a zero `count' field

2000-11-26  John Harper  <jsh@eazel.com>

	* events.c, functions.c (client_message, Fget_x_property): when
	converting from 32-bit data use rep_make_long_uint () instead
	of rep_MAKE_INT () (which will fail on large values)

2000-11-20  John Harper  <jsh@eazel.com>

	* events.c (focus_out): if unable to find a window, check for a
	deleted window, and nullify focus_window variable if one is
	found

	* windows.c (remove_window): don't nullify focus_window if
	removing the focused window
	(window_mark_type): mark focus_window variable
