@@ -1,3 +1,8 @@
+2000-12-22  John Harper  <jsh@eazel.com>
+
+	* images.c (Fmake_image_from_x_drawable): special cased (=
+	depth 1) case for gdk-pixbuf substrate
+
 2000-12-18  John Harper  <jsh@eazel.com>
 
 	* keys.c (direct_modifiers): only substitute physical for
